Closing this project

--- a/MeetMeApp.Web/appsettings.json
+++ b/MeetMeApp.Web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MeetingAppDbConnectionString": "Server=DESKTOP-7HNJHNR\\SQLEXPRESS;Database=MeetMeDb;Trusted_Connection=True;TrustServerCertificate=True;"
+  }
 }
